# Hypertext

./: .gitignore  LICENSE  README.md  ROADMAP.md
docs/: How-To-Style-Match.md  How-To-TGC.md  How-To-TTS.md  faq.md  printing.md  prompt-recipe.md  rules.md  style-guide.md
package/: README.md  pyproject.toml  setup.py  test_package.py
package/hypertext/: __init__.py  __main__.py  cli.py
package/hypertext/cards/: __init__.py  clean.py  composite.py  polish.py  render.py  validate.py
package/hypertext/gallery/: __init__.py  builder.py  deck.py
package/hypertext/gemini/: __init__.py  image.py  review.py  style.py  text.py
package/hypertext/lots/: __init__.py  exporter.py  generation.py  renderer.py
package/hypertext/pipeline/: daily.py  template.py
package/hypertext/templates/: card_style_prompt_template.txt  card_style_rubric.txt
package/hypertext/tgc/: __init__.py  __main__.py  client.py  prep.py  print_export.py  processor.py  upload.py
package/hypertext/utils/: __init__.py  image.py
package/hypertext/watermark/: __init__.py  apply.py  crypto.py  verify.py
package/hypertext_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
plans/: roadmap.md
schema/: hypertext_card.schema.json
scripts/: debug_sprite.py  debug_tts_json.py  extract_symbols.py  test_tgc_auth.py  test_tgc_auth.sh  test_tgc_package.py  tgc_sso_auth.py  tts_sync.sh
templates/: card_meta_template.yml  card_prompt_template.json  card_prompt_template_explicit.json  card_style_prompt_template.txt  gallery_assets.css  gallery_assets.js  gallery_index_template.html  (+5 more)
(+458 files in other folders)
